test: ensure users listing is admin only
