# src/routes/v1/users.routes.js
@@ -4,6 +4,7 @@ const usersController = require("../../controllers/users.controller");
 const userAuth = require("../../middlewares/user-auth.middleware");
 const adminOnly = require("../../middlewares/role-admin-only");
 
+router.get("/", userAuth, adminOnly(), usersController.list);
 router.get("/count", userAuth, adminOnly(), usersController.count);
 
 module.exports = router;
